Se creó con Colab

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -38,8 +38,7 @@
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
-        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Erick Eduardo Aguilar Hernández</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
         "  </font>"
       ]
@@ -54,13 +53,13 @@
         "\n",
         "Dentro de las áreas que abarca el estudio de las ciencias es bien conocido que regularmente es necesario identificar secuencias, formas, cadenas, etc. que se repiten frecuentemente, a estas 'formas' que se repiten frecuentemente se les conocen como **patrones**.\n",
         "\n",
-        "Por ejemplo, para un biólogo que analiza la **cadena de adn** de un individuo conformada por las letras (GTAC) le interesa identificar patrones que pueden determinar su genotipo. O por ejemplo para un investigador que quiere determinar cual es **la ruta mas transitada** dentro de Ciudad Universitaria, le interesa identificar el patrón que determinar este trayecto. \n",
+        "Por ejemplo, para un biólogo que analiza la **cadena de adn** de un individuo conformada por las letras (GTAC) le interesa identificar patrones que pueden determinar su genotipo. O por ejemplo para un investigador que quiere determinar cual es **la ruta mas transitada** dentro de Ciudad Universitaria, le interesa identificar el patrón que determinar este trayecto.\n",
         "\n",
         "Para alguien que labore en el are de minería de datos, es de vital importancia identificar patrones dentro de las bases de datos. Con la información adquirida identificando los patrones de un determinado usuario, se le puede **mostrar publicidad que encaje con sus patrones** para que este usuario realice compras.\n",
         "\n",
         "Para un estudiante de actuaria seria muy atractivo identificar patrones dentro de las **bases estadísticas** (INEGI) y con base en estos datos ajustar las tasas que emplea una determinada empresa para los costos de sus productos.\n",
         "\n",
-        "Recientemente también se ha descubierto que el **comportamiento de la bolsa de valores** es repetitivo, por lo que encontrar un patrón en este sentido da una gran ventaja al que posea dicha información. \n",
+        "Recientemente también se ha descubierto que el **comportamiento de la bolsa de valores** es repetitivo, por lo que encontrar un patrón en este sentido da una gran ventaja al que posea dicha información.\n",
         "\n",
         "Para identificar los patrones antes mencionados existen muchas técnicas y herramientas, por ejemplo las herramientas que nos proporciona un **procesador de textos** (word) o también los **navegadores de internet** y finalmente tenemos a las **expresiones regulares**. De todo esto hablaremos en las siguientes secciones."
       ]
@@ -122,8 +121,8 @@
         "\n",
         "La opción más sencilla es abrir este archivo y buscar (de manera manual) cada una de las coincidencias del patron \"Actuaría\" y reemplazarlo por la palabra \"Matemáticas Aplicadas\", sin embargo esta opción es muy tediosa y lenta, así que lo mejor es hacer uso de la \"búsqueda y reemplazo\" que ofrecen la gran mayoria de procesadores de texto, veamos.\n",
         "\n",
-        "<center> \n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/procesador.gif?raw=1\" width=\"1000\"> \n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/procesador.gif?raw=1\" width=\"1000\">\n",
         "</center>"
       ]
     },
@@ -135,7 +134,7 @@
       "source": [
         "## Navegadores de Internet\n",
         "\n",
-        "Desde los inicios de la civilización una de las principales formas de comunicación era mediante texto y de forma muy similar comenzo el desarrollo de lo que hoy conocemos como Internet. \n",
+        "Desde los inicios de la civilización una de las principales formas de comunicación era mediante texto y de forma muy similar comenzo el desarrollo de lo que hoy conocemos como Internet.\n",
         "\n",
         "Inicialmente internet fue un proyecto militar que tenia la intención de conectar multiples computadoras (servidores) mediante una red para establecer comunicación entre ellas mediante mensajes de texto, posteriormente este proyecto dejo de pertencer unicamente a la milicia y se convirtio en lo que se conoció como [*ARPANET*](https://www.fib.upc.edu/retro-informatica/historia/internet.html).\n",
         "\n",
@@ -245,7 +244,7 @@
         "En este campo basta con que escribamos el texto a buscar (patrón) y el navegador nos mostrará todas las coincidencias dentro del sitio web. En la siguiente animación puedes ver un pequeño ejemplo de dicha búsqueda.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/Buscar.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/Buscar.gif?raw=1\" width=\"1000\">\n",
         "</center>"
       ]
     },
@@ -266,7 +265,7 @@
         "En la siguiente animación se muestra como acceder a esta herramienta y como utilizar algunas de sus opciones.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/desarrollador.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/desarrollador.gif?raw=1\" width=\"1000\">\n",
         "</center>"
       ]
     },
@@ -282,7 +281,7 @@
         "\n",
         "*   *Mozilla Firefox*: ya con bastantes años en desarrollo, *firefox* es el segundo navegador más usado y es muy similar a *chrome* en todas sus características.\n",
         "*   *Opera*: este es un navegador de reciente surgimiento que cumple con la mayoría de los requisitos de cualquier navegador, incorporando bloque de anuncios y gestión de redes sociales.\n",
-        "*   *Safari*: este navegador surge para los usuarios del sistema operativo IOS, su principal características es que únicamente puede ser usado en dispositivos de la marca *Mac*. \n",
+        "*   *Safari*: este navegador surge para los usuarios del sistema operativo IOS, su principal características es que únicamente puede ser usado en dispositivos de la marca *Mac*.\n",
         "*   *Brave*: es un navegador concebido especialmente para proteger la privacidad que es relativamente nuevo en el mundillo. Entre sus funciones de refuerzo de la privacidad encontramos los bloqueadores de anuncios, rastreadores y huella digital, así como permitir ocultar la IP al navegar por internet.\n",
         "\n"
       ]
@@ -295,9 +294,9 @@
       "source": [
         "# Expresiones Regulares (*RegEx*)\n",
         "\n",
-        "La búsqueda de patrones dentro de un conjunto de datos, es una un tanto sencilla para el cerebro humano ya que este ha gozado de miles de años de evolución para adaptarse a esta labor. Sin embargo hacer que una computadora pueda identificar patrones de igual manera que lo hace el cerebro humano no es una labor trivial. \n",
+        "La búsqueda de patrones dentro de un conjunto de datos, es una un tanto sencilla para el cerebro humano ya que este ha gozado de miles de años de evolución para adaptarse a esta labor. Sin embargo hacer que una computadora pueda identificar patrones de igual manera que lo hace el cerebro humano no es una labor trivial.\n",
         "\n",
-        "Las expresiones regulares ó regex son un potente lenguaje de descripción del texto, esto significa que mediante este lenguaje podemos generar instrucciones para, buscar, contar, substituir o eliminar patrones de texto. \n",
+        "Las expresiones regulares ó regex son un potente lenguaje de descripción del texto, esto significa que mediante este lenguaje podemos generar instrucciones para, buscar, contar, substituir o eliminar patrones de texto.\n",
         "\n",
         "Actualmente la mayoría de los lenguajes de programación (y algunos procesadores de texto) permiten el uso de regex dentro de sus comandos básicos."
       ]
@@ -334,7 +333,7 @@
         "\\hline\n",
         "\\text{\\t} & \\text{Tabulador} \\\\\n",
         "\\hline\n",
-        "\\text{\\\\} \\text{\\\\} & \\text{Barra diagonal inversa}\\\\ \n",
+        "\\text{\\\\} \\text{\\\\} & \\text{Barra diagonal inversa}\\\\\n",
         "\\hline\n",
         "\\text{\\v} & \\text{Tabulacion vertical}\\\\\n",
         "\\hline\n",
@@ -363,7 +362,7 @@
         "\\hline\n",
         "\\text{\\$} & \\text{Final de la linea} \\\\\n",
         "\\hline\n",
-        "\\text{\\A} & \\text{Inicio del texto}\\\\ \n",
+        "\\text{\\A} & \\text{Inicio del texto}\\\\\n",
         "\\hline\n",
         "\\text{\\Z} & \\text{Final del texto}\\\\\n",
         "\\hline\n",
@@ -392,7 +391,7 @@
         "\\hline\n",
         "\\text{\\d} & \\text{Un caracter numérico} \\\\\n",
         "\\hline\n",
-        "\\text{\\D} & \\text{Un caracter no numérico}\\\\ \n",
+        "\\text{\\D} & \\text{Un caracter no numérico}\\\\\n",
         "\\hline\n",
         "\\text{\\s} & \\text{Cualquier espacio, igual que [\\t\\n]}\\\\\n",
         "\\hline\n",
@@ -409,7 +408,7 @@
         "\\hline\n",
         "\\text{+} & \\text{Una o mas, similar a {1,}} \\\\\n",
         "\\hline\n",
-        "\\text{?} & \\text{Cero o una, similar a {0,1}}\\\\ \n",
+        "\\text{?} & \\text{Cero o una, similar a {0,1}}\\\\\n",
         "\\hline\n",
         "\\text{{n}} & \\text{Exactamente $n$ veces}\\\\\n",
         "\\hline\n",
@@ -495,7 +494,7 @@
         "Una vez descargado el archivo, lo podemos ver en en el menú de archivo e incluso lo podemos descargar a nuestro equipo local.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/texto.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/texto.gif?raw=1\" width=\"1000\">\n",
         "</center>"
       ]
     },
@@ -535,20 +534,20 @@
         "Probemos su funcionamiento en *Eclipse*.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/primerapellido.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/primerapellido.gif?raw=1\" width=\"1000\">\n",
         "</center>\n",
         "\n",
         "En la parte sombreada en morado se muestran las coincidencias (*matches*) del patrón que generamos con la *regex*, ahora podríamos usaro o reemplazar estas coincidencias con lo que necesitemos, incluso con una nueva expresión regular, veamos.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/capturado.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/capturado.gif?raw=1\" width=\"1000\">\n",
         "</center>\n",
         "\n",
         "Bien, hasta ahora ya obtuvimos el primer apellido de los alumnos, pero normalmente es necesario obtener el nombre completo, así que continuemos agregando elementos a nuestra *regex*, para que podamos obtener los dos apellidos y el primer nombre.\n",
         "\n",
         "Primero necesitamos eliminar el metacarter `\\b` ya que ahora nuestra expresión va a contener más elementos, así que lo substituimos por `\\s+`, para que la nueva expresión se vea así `^\\d+\\s+\\D{1,9}\\s+`, comprueba el resultado.\n",
         "\n",
-        "Necesitamos agregar el segundo apellido, eso lo podemos hacer repitiendo el patrón `D{1,9}` (te sugiero probar cada paso intermedio), posteriormente tenemos al menos un espacio `\\s+` y finalmete el primer, usamos un `D{1,11}`, de tal manera que la *regrex* completa queda así.\n",
+        "Necesitamos agregar el segundo apellido, eso lo podemos hacer repitiendo el patrón `D{1,9}` (te sugiero probar cada paso intermedio), posteriormente tenemos al menos un espacio `\\s+` y finalmete para el primer apellido usamos un `D{1,11}`, de tal manera que la *regrex* completa queda así.\n",
         "\n",
         "`^\\d+\\s+\\D{1,9}\\s+\\D{1,9}\\s+\\D{1,11}\\b`\n",
         "\n",
@@ -561,7 +560,7 @@
         "A continuación vemos el resultado de ambas *regex*.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dosregex.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dosregex.gif?raw=1\" width=\"1000\">\n",
         "</center>\n",
         "\n",
         "Otra forma un tanto \"tramposa\", es tener un poco de información de los datos que contiene el documento y usar a la carrera como delimitador del patrón que estamos buscando, es decir.\n",
@@ -571,7 +570,7 @@
         "Con esta *regex*, básicamente estamos buscando el mismo patrón que con las versiones previas, pero usamos las opciones de las cadenas que corresponden a las carrera para indicar que es el final de patrón que estamos buscando.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/carreras.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/carreras.gif?raw=1\" width=\"1000\">\n",
         "</center>\n",
         "\n",
         "Esta última *regex* es más sencilla de construir sin embargo obtuvimos más de lo que necesitamos, en este caso el nombre de las carreras, sin embargo existen editores que nos permiten copiar los *matches* y posteriormente podemos usar una nueva *regex* para eliminar las carreras.\n",
@@ -603,7 +602,7 @@
         "Al probar esta regex en nuestra base de datos obtenemos el siguiente resultado.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/correos.gif?raw=1\" width=\"1000\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/correos.gif?raw=1\" width=\"1000\">\n",
         "</center>"
       ]
     },
@@ -624,7 +623,7 @@
         "id": "WfmNVnjKsYzi"
       },
       "source": [
-        "# Referencias \n",
+        "# Referencias\n",
         "\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
         "* Referencias Libro Web: Introduccion a Python.\n",
